Fixed overrides, removed unused rule, added info about sim-qt.

--- a/branches/0.9.4-debian/debian/control
+++ b/branches/0.9.4-debian/debian/control
@@ -67,6 +67,7 @@ Description: Simple Instant Messenger (Qt)
   Homepage: http://sim-im.org/
  .
   This package is compiled with Qt support.
+  If you have KDE installed then install sim package instead.
 
 Package: sim-data
 Architecture: all
