--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -53,6 +53,10 @@ MACRO_BOOL_TO_01(OPENSSL_FOUND USE_OPENSSL)
 MACRO_BOOL_TO_01(X11_FOUND HAVE_X)
 MACRO_BOOL_TO_01(USE_KDE3 USE_KDE)
 
+# development or release builds
+OPTION(DEV_BUILD "Build development version" YES)
+MACRO_BOOL_TO_01(DEV_BUILD CVS_BUILD)
+
 # global settings for every project
 ADD_DEFINITIONS(${QT_DEFINITIONS} -DHAVE_CONFIG_H)
 INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR}
