--- a/branches/branch-QString/CMakeLists.txt
+++ b/branches/branch-QString/CMakeLists.txt
@@ -43,6 +43,7 @@ IF(NOT WIN32)
     IF(KDE3_FOUND)
         OPTION(USE_KDE3 "Use kde3 integration" YES)
         INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
+	  LINK_DIRECTORIES(${KDE3_LIB_DIR})
     ENDIF(KDE3_FOUND)
 ENDIF(NOT WIN32)
 
