--- a/branches/branch-QString/CMakeLists.txt
+++ b/branches/branch-QString/CMakeLists.txt
@@ -81,7 +81,8 @@ if(WIN32)
     SET(SIM_SOUND_DIR  sounds)
     SET(SIM_STYLES_DIR styles)
 else(WIN32)
-    SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib CACHE PATH "Path to sim library")
+    SET(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
+    SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX} CACHE PATH "Path to sim library")
     SET(BINDIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "Path to sim binary")
     SET(DATADIR ${CMAKE_INSTALL_PREFIX}/share/apps/sim CACHE PATH "Path to sim data")
     SET(SIM_PLUGIN_DIR ${LIBDIR}/sim${SIM_FLAVOUR} CACHE PATH "Path to sim plugins")
