don't add kde paths when kde isn't used autoaway: link

--- a/branches/branch-QString/CMakeLists.txt
+++ b/branches/branch-QString/CMakeLists.txt
@@ -42,8 +42,10 @@ IF(NOT WIN32)
     INCLUDE(FindKDE3)
     IF(KDE3_FOUND)
         OPTION(USE_KDE3 "Use kde3 integration" YES)
-        INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
-	  LINK_DIRECTORIES(${KDE3_LIB_DIR})
+        IF(USE_KDE3)
+            INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
+            LINK_DIRECTORIES(${KDE3_LIB_DIR})
+        ENDIF(USE_KDE3)
     ENDIF(KDE3_FOUND)
 ENDIF(NOT WIN32)
 
