--- a/branches/branch-QString/plugins/autoaway/CMakeLists.txt
+++ b/branches/branch-QString/plugins/autoaway/CMakeLists.txt
@@ -52,7 +52,9 @@ IF(COMPILE_PLUGIN)
         )
     ENDIF(WIN32)
 
+    LINK_DIRECTORIES(${X11_LIBRARY_DIR})
     SIM_ADD_PLUGIN(autoaway)
+message(STATUS "X11_LIBRARY_DIR: ${X11_LIBRARY_DIR}")
     TARGET_LINK_LIBRARIES(autoaway ${XSS_LIB})
 ELSE(COMPILE_PLUGIN)
     MESSAGE(STATUS "XScreenSaver library not found, autoaway plugin disabled")
