linux gcc 4.1/64bit compile

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -42,7 +42,10 @@ IF(NOT WIN32)
     INCLUDE(FindKDE3)
     IF(KDE3_FOUND)
         OPTION(USE_KDE3 "Use kde3 integration" YES)
-        INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
+        IF(USE_KDE3)
+            INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
+            LINK_DIRECTORIES(${KDE3_LIB_DIR})
+        ENDIF(USE_KDE3)
     ENDIF(KDE3_FOUND)
 ENDIF(NOT WIN32)
 
@@ -84,7 +87,8 @@ if(WIN32)
     SET(SIM_SOUND_DIR  sounds)
     SET(SIM_STYLES_DIR styles)
 else(WIN32)
-    SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib CACHE PATH "Path to sim library")
+    SET(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
+    SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX} CACHE PATH "Path to sim library")
     SET(BINDIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "Path to sim binary")
     SET(DATADIR ${CMAKE_INSTALL_PREFIX}/share/apps/sim CACHE PATH "Path to sim data")
     SET(SIM_PLUGIN_DIR ${LIBDIR}/sim${SIM_FLAVOUR} CACHE PATH "Path to sim plugins")
