--- a/trunk/plugins/autoaway/CMakeLists.txt
+++ b/trunk/plugins/autoaway/CMakeLists.txt
@@ -52,6 +52,7 @@ IF(COMPILE_PLUGIN)
         )
     ENDIF(WIN32)
 
+    LINK_DIRECTORIES(${X11_LIBRARY_DIR})
     SIM_ADD_PLUGIN(autoaway)
     TARGET_LINK_LIBRARIES(autoaway ${XSS_LIB})
 ELSE(COMPILE_PLUGIN)
