--- a/branches/branch-QString/plugins/styles/wood/CMakeLists.txt
+++ b/branches/branch-QString/plugins/styles/wood/CMakeLists.txt
@@ -24,7 +24,7 @@ TARGET_LINK_LIBRARIES(wood simlib)
 SET_TARGET_PROPERTIES(wood PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS wood LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
+INSTALL(TARGETS wood LIBRARY DESTINATION ${SIM_PLUGIN_DIR}/styles RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
 
 IF(WIN32)
     SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/plugins/styles)
