--- a/branches/branch-QString/plugins/yahoo/CMakeLists.txt
+++ b/branches/branch-QString/plugins/yahoo/CMakeLists.txt
@@ -28,7 +28,10 @@ if(OPENSSL_FOUND)
             yahoosearchbase.ui
     )
     
+    INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
+    LINK_DIRECTORIES(${OPENSSL_LIBRARY_DIR})
     SIM_ADD_PLUGIN(yahoo)
+    TARGET_LINK_LIBRARIES(yahoo ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 else(OPENSSL_FOUND)
     MESSAGE(STATUS "OpenSSL library not found, yahoo plugin disabled")
 endif(OPENSSL_FOUND)
