--- a/branches/branch-QString/sim/CMakeLists.txt
+++ b/branches/branch-QString/sim/CMakeLists.txt
@@ -96,6 +96,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # openssl is optional
 if(OPENSSL_FOUND)
+  LINK_DIRECTORIES(${OPENSSL_LIBRARY_DIR})
   INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
   TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 endif(OPENSSL_FOUND)
