--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -98,6 +98,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # openssl is optional
 if(OPENSSL_FOUND)
+  LINK_DIRECTORIES(${OPENSSL_LIBRARY_DIR})
   INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
   TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 endif(OPENSSL_FOUND)
@@ -110,7 +111,7 @@ ENDIF(USE_KDE3)
 
 # we need wsock32 on win32
 if (WIN32)
-  TARGET_LINK_LIBRARIES(simlib wsock32)
+  TARGET_LINK_LIBRARIES(simlib wsock32 wininet)
 endif(WIN32)
 
 # libxml, libxslt and iconv
