--- a/trunk/sim/png/CMakeLists.txt
+++ b/trunk/sim/png/CMakeLists.txt
@@ -1,3 +1,3 @@
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}  )
 INCLUDE(KDE4InstallIcons)
-KDE4_INSTALL_ICONS( ${SIM_ICONS_DIR} )
+KDE4_INSTALL_ICONS( ${CMAKE_INSTALL_PREFIX}/share/icons )
