As long as this workaround only needed for MSVC

--- a/trunk/plugins/weather/CMakeLists.txt
+++ b/trunk/plugins/weather/CMakeLists.txt
@@ -19,6 +19,11 @@ SET(weather_UICS
 )
 
 # weather_.jisp until this is fixed in cmake
-ADD_JISP_ARCHIVE(jisp weather_.jisp weather_SRCS)
+if(MSVC)
+   ADD_JISP_ARCHIVE(jisp weather_.jisp weather_SRCS)
+else(MSVC)
+   ADD_JISP_ARCHIVE(jisp weather.jisp weather_SRCS)
+endif(MSVC)
+
 
 SIM_ADD_PLUGIN(weather)
