move ssbi snacs into own file

--- a/branches/branch-QString/plugins/icq/CMakeLists.txt
+++ b/branches/branch-QString/plugins/icq/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(icq_SRCS
         icqsearch.cpp
         icqsecure.cpp
         icqservice.cpp
+        icqssbi.cpp
         icqvarious.cpp
         interestsinfo.cpp
         moreinfo.cpp
