--- a/branches/branch-QString/plugins/icq/icq.vcproj
+++ b/branches/branch-QString/plugins/icq/icq.vcproj
@@ -1019,6 +1019,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\icqssbi.cpp"
+				>
+			</File>
+			<File
 				RelativePath="icqvarious.cpp"
 				>
 				<FileConfiguration
