--- a/branches/0.9.4/configure.in.in
+++ b/branches/0.9.4/configure.in.in
@@ -27,7 +27,7 @@ if ! echo $CXXFLAGS | fgrep '-fno-strict-aliasing' >/dev/null 2>&1 ; then
     CXXFLAGS="$CXXFLAGS -fno-strict-aliasing" 
     AC_TRY_COMPILE([], [return 0;], , CXXFLAGS=$old_cxxflags) 
 fi 
-RELEASE_BUILD="no"
+RELEASE_BUILD="yes"
 AC_ARG_ENABLE(
  release,
  [  --enable-release        enable release build],
