qt3 subdir is not needed anymore since 0.9.4 is not compilable with qt2

--- a/branches/0.9.4/sim/Makefile.am
+++ b/branches/0.9.4/sim/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = sim 
 lib_LTLIBRARIES = libsim.la
 
-SUBDIRS=png qt3 libltdl
+SUBDIRS=png libltdl
 
 sim_SOURCES = sim.cpp \
  sim.rc
