--- a/trunk/plugins/_core/GPL-Icons/Makefile.am
+++ b/trunk/plugins/_core/GPL-Icons/Makefile.am
@@ -4,5 +4,5 @@ iconsdir=$(kde_datadir)/sim/icons/
 
 all:  GPL-Icons.jisp
 
-GPL-icons.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
+GPL-Icons.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
 	$(ZIP) $(ZIP_FLAGS) $@ $^
