Move out class SIM:::Event / EventReceiver into an own file Make EventLog an own class to show how I think, SIM::EVent should be handled. If you don't like it, revert this checkin and tell me how you want.

--- a/trunk/sim.vcproj
+++ b/trunk/sim.vcproj
@@ -406,6 +406,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\sim\event.cpp"
+				>
+			</File>
+			<File
 				RelativePath="sim\exec.cpp"
 				>
 				<FileConfiguration
@@ -1209,6 +1213,10 @@
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\sim\event.h"
+				>
 			</File>
 			<File
 				RelativePath="sim\exec.h"
