--- a/trunk/ALL_BUILD.vcproj
+++ b/trunk/ALL_BUILD.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="simall"
+	Name="ALL_BUILD"
 	ProjectGUID="{5EA3473D-F924-4481-98AF-E64EEEFA1649}"
 	RootNamespace="simall"
 	Keyword="MakeFileProj"
