--- a/trunk/plugins/_core/styles/Makefile.am
+++ b/trunk/plugins/_core/styles/Makefile.am
@@ -6,6 +6,7 @@ dist_styles_DATA = \
  SIM.5.xsl \
  SIM.5.2.xsl \
  SIM.5.2.2.xsl \
+ SIM.5.2.3.xsl \
  XChat.xsl \
  XChat2seconds.xsl \
  XChat3fullDate.xsl \
